--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^0.14.8",
     "react-native": "^0.22.2",
     "react-native-button": "^1.4.2",
-    "react-native-router-flux": "^3.2.7"
+    "react-native-drawer": "^2.0.0",
+    "react-native-router-flux": "^3.2.7",
+    "react-native-tabs": "^1.0.5",
+    "realm": "^0.11.1"
   }
 }
