--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "BankReact",
-  "version": "0.0.1",
+  "name": "BVNK",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start"
