--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,13 @@ local.properties
 #
 node_modules/
 npm-debug.log
+
+default.realm
+
+default.realm.lock
+
+default.realm.log
+
+default.realm.log_a
+
+default.realm.log_b
