--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^0.14.8",
     "react-native": "^0.22.2",
     "react-native-button": "^1.4.2",
+    "react-native-device": "^1.0.1",
     "react-native-drawer": "^2.2.6",
+    "react-native-keyboard-spacer": "^0.3.0",
     "react-native-maps": "^0.7.1",
     "react-native-router-flux": "^3.2.9",
     "react-native-tabs": "^1.0.5",
