--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "react-native-button": "^1.4.2",
     "react-native-device": "^1.0.1",
     "react-native-drawer": "^2.2.6",
-    "react-native-keyboard-spacer": "^0.3.0",
     "react-native-maps": "^0.7.1",
+    "react-native-push-notification": "1.0.7",
     "react-native-router-flux": "^3.2.9",
     "react-native-tabs": "^1.0.5",
-    "realm": "^0.11.1"
+    "realm": "^0.14.0"
+  },
+  "devDependencies": {
+    "rnpm-plugin-upgrade": "^0.26.0"
   }
 }
