--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-device": "^1.0.1",
     "react-native-drawer": "^2.2.6",
     "react-native-maps": "^0.7.1",
+    "react-native-modalbox": "^1.3.5",
     "react-native-push-notification": "2.0.2",
     "react-native-router-flux": "^3.3.4",
     "realm": "^0.14.0"
