--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "~15.2.1",
+    "react": "15.4.1",
     "react-addons-pure-render-mixin": "~15.2.1",
-    "react-native": "~0.31.0",
+    "react-native": "~0.39.0",
     "react-native-button": "^1.4.2",
     "react-native-device": "^1.0.1",
     "react-native-drawer": "^2.2.6",
-    "react-native-maps": "^0.7.1",
+    "react-native-maps": "^0.12.2",
     "react-native-modalbox": "^1.3.5",
     "react-native-push-notification": "2.0.2",
     "react-native-router-flux": "^3.3.4",
